javadoc creation now works with Java 11